--- a/ecoplastol/frmMain.xaml
+++ b/ecoplastol/frmMain.xaml
@@ -11,10 +11,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Button Grid.Row="0" Name="btnParametry" Content="PARAMETRY" HorizontalContentAlignment="Left" Height="40" Width="200" FontSize="24" Padding="10,0,0,0" Click="btnParametry_Click" Margin="201,10,741,319"/>
-        <Button Grid.Row="0" Name="btnWyroby" Content="WYROBY" HorizontalContentAlignment="Left" Width="200" Click="btnWyroby_Click" Height="40" Padding="10,0,0,0" FontSize="24" Margin="201,70,741,259"/>
+        <Button Grid.Row="0" Name="btnParametry" Content="PARAMETRY stare" HorizontalContentAlignment="Left" Height="40" Width="200" FontSize="24" Padding="10,0,0,0" Click="btnParametry_Click" Margin="201,10,741,319"/>
+        <Button Grid.Row="0" Name="btnWyroby" Content="WYROBY stare" HorizontalContentAlignment="Left" Width="200" Click="btnWyroby_Click" Height="40" Padding="10,0,0,0" FontSize="24" Margin="201,55,741,274"/>
         <Button Grid.Row="0" Content="PLANOWANIE" FontSize="22" HorizontalContentAlignment="Left" Padding="10,0,0,0" Margin="28,128,566,0" VerticalAlignment="Top" Width="200" Name="btnPlanowanie2" Click="BtnPlanowanie2_Click" Height="40"/>
-        <Button Grid.Row="0" Content="KONFIGURACJA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="28,173,568,0" VerticalAlignment="Top" Click="Button_Click" Height="40" Width="200"/>
+        <Button Grid.Row="0" Content="ZLECENIA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="201,173,741,0" VerticalAlignment="Top" Name="btnZlecenia" Click="BtnZlecenia_Click" Height="40" Width="200"/>
+        <Button Grid.Row="0" Content="KONFIGURACJA" HorizontalContentAlignment="Left" FontSize="22" Padding="10,0,0,0" Margin="201,218,741,0" VerticalAlignment="Top" Click="Button_Click" Height="40" Width="200"/>
         <Button Grid.Row="1" FontSize="20" Name="btnZamknij" Content="Z A M K N I J" Click="BtnZamknij_Click"/>
     </Grid>
 </Window>
