--- a/ecoplastol/konfiguracja/produkcja/PanelProdWyroby.xaml
+++ b/ecoplastol/konfiguracja/produkcja/PanelProdWyroby.xaml
@@ -4,12 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ecoplastol.konfiguracja.produkcja"
+             xmlns:globals="clr-namespace:ecoplastol.globals"
              xmlns:ts="clr-namespace:ecoplastol"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1600">
     <UserControl.Resources>
         <ResourceDictionary>
-            <Style TargetType="Button" x:Key="btnGradientOrange">
+                <globals:BackgroundColor x:Key="valueToBackground"/>
+                <globals:RezystancjaConverter x:Key="rezConverter"/>
+            
+                <Style TargetType="Button" x:Key="btnGradientOrange">
                 <Setter Property="Background">
                     <Setter.Value>
                         <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
@@ -43,6 +47,8 @@
     </UserControl.Resources>
     <Grid Background="White">
         <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <!-- lista datagrid -->
             <RowDefinition Height="*"/>
             <!-- textboxy comboboxy -->
             <RowDefinition Height="320"/>
@@ -51,7 +57,22 @@
             <!-- przyciski dodaj, popraw itd.-->
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="grdLista" Grid.Row="0" AutoGenerateColumns="False" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected" SelectionChanged="GrdLista_SelectionChanged" IsReadOnly="true" Margin="0,0,0,0" >
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="25"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="150"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Row="0" Grid.Column="1" Content="Pokaż WSZYSTKIE" Name="btnPokazWszystkie" Click="BtnPokazWszystkie_Click"/>
+            <Button Grid.Row="0" Grid.Column="2" Content="Pokaż AKTYWNE" Name="btnPokazAktywne" Click="BtnPokazAktywne_Click"/>
+            <Label Grid.Row="1" Grid.Column="1" Content="Iość pozycji :" Padding="0,0,5,0" VerticalContentAlignment="Center" HorizontalAlignment="Right"/>
+            <Label Grid.Row="1" Grid.Column="2" Content="..." Padding="5,0,0,0" VerticalContentAlignment="Center" HorizontalAlignment="Left" Name="lblIloscPozycji"/>
+        </Grid>
+        <DataGrid x:Name="grdLista" Grid.Row="1" AutoGenerateColumns="False" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected" SelectionChanged="GrdLista_SelectionChanged" IsReadOnly="true" Margin="0,0,0,0" >
 
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding id}"  Header="id" Width="SizeToHeader" Visibility="Hidden"/>
@@ -99,7 +120,7 @@
                 <DataGridTextColumn x:Name="czasmColumn" Binding="{Binding czasm, StringFormat=\{0:yyyy-MM-dd HH:mm:ss\}}" Header="czasm" Width="100"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Grid x:Name="grdPozycje" ShowGridLines="False"  Grid.Row="1" Margin="0,0,0,0" >
+        <Grid x:Name="grdPozycje" ShowGridLines="False"  Grid.Row="2" Margin="0,0,0,0" >
             <Grid.ColumnDefinitions>
                 <!-- Wyrób identyfikacja -->
                 <ColumnDefinition Width="380" />
@@ -424,7 +445,7 @@
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
                 <TextBox Grid.Row="7" Grid.Column="1" FontSize="14" x:Name="txtITFprn" Text="{Binding itf_prn}" PreviewTextInput="TxtITFprn_PreviewTextInput" MaxLength="2" KeyUp="TxtITFprn_KeyUp" GotFocus="TxtITFprn_GotFocus" LostFocus="TxtITFprn_LostFocus"/>
-                <TextBox Grid.Row="8" Grid.Column="1" FontSize="14" x:Name="txtITFrez" Text="{Binding itf_rez}" MaxLength="3" PreviewTextInput="TxtITFrez_PreviewTextInput" KeyUp="TxtITFrez_KeyUp" GotFocus="TxtITFrez_GotFocus" LostFocus="TxtITFrez_LostFocus"/>
+                <TextBox Grid.Row="8" Grid.Column="1" FontSize="14" x:Name="txtITFrez" Text="{Binding itf_rez, Converter={StaticResource rezConverter}, UpdateSourceTrigger=LostFocus}" MaxLength="6" PreviewTextInput="TxtITFrez_PreviewTextInput" KeyUp="TxtITFrez_KeyUp" GotFocus="TxtITFrez_GotFocus" LostFocus="TxtITFrez_LostFocus"/>
                 <ComboBox x:Name="cbbITFodch" Grid.Row="9" Grid.Column="1" FontSize="14" DropDownClosed="CbbITFodch_DropDownClosed" GotFocus="CbbITFodch_GotFocus" LostFocus="CbbITFodch_LostFocus" SelectedValuePath="id" SelectedValue="{Binding itf_odch}">
                     <ComboBox.ItemTemplateSelector>
                         <ts:ComboBoxItemTemplateSelector>
@@ -779,10 +800,12 @@
                         </ts:ComboBoxItemTemplateSelector>
                     </ComboBox.ItemTemplateSelector>
                 </ComboBox>
-                <!--<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding wyrob_kod}"/>-->
+
+                <Label Grid.Row="9" Grid.Column="0"  VerticalAlignment="Center" FontSize="14" Padding="10,0,0,0" Content="Aktywny :" />
+                <CheckBox Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" FontSize="14" Padding="10,0,0,0" IsChecked="{Binding aktywny}" />
             </Grid>
         </Grid>
-        <Grid x:Name="grdKody" ShowGridLines="False"  Grid.Row="2" Margin="0,10,0,0" >
+        <Grid x:Name="grdKody" ShowGridLines="False"  Grid.Row="3" Margin="0,10,0,0" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="90"/>
                 <ColumnDefinition Width="20"/>
@@ -928,7 +951,7 @@
             <Label Grid.Row="2" Grid.Column="0" Content="ITF2" />
             <Label Grid.Row="3" Grid.Column="0" Content="TRACEABILITY" />
         </Grid>
-        <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
+        <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal">
             <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnDodaj" Content="DODAJ" Click="BtnDodaj_Click" Height="30" VerticalAlignment="Bottom" />
             <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnKlonuj" Content="KLONUJ" Click="BtnKlonuj_Click" />
             <Button FontSize="16" Style="{StaticResource btnGradientLightGreen}" Width="120" Name="btnPopraw" Content="POPRAW" Click="BtnPopraw_Click" />
